OLMIS-7311: Added possibility to turn on/off schedule
